--- a/modules/client/pom.xml
+++ b/modules/client/pom.xml
@@ -26,42 +26,82 @@
     <version>1.1-SNAPSHOT</version>
   </parent>
   <groupId>org.apache.geronimo</groupId>
-  <artifactId>geronimo-derby</artifactId>
+  <artifactId>geronimo-client</artifactId>
   <version>${geronimoVersion}</version>
   <packaging>jar</packaging>
-  <name>Geronimo :: Derby</name>
-  <description>Wrapper for using Apache Derby as a bundled database.</description>
+  <name>Geronimo :: Client</name>
 
   <!-- ============ -->
   <!-- Dependencies -->
   <!-- ============ -->
+
   <dependencies>
+    <!--for GeronimoSecurityException-->
+    <dependency>
+      <groupId>org.apache.geronimo</groupId>
+      <artifactId>geronimo-common</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>org.apache.geronimo</groupId>
       <artifactId>geronimo-kernel</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>org.apache.geronimo</groupId>
+      <artifactId>geronimo-j2ee</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.geronimo</groupId>
+      <artifactId>geronimo-naming</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.geronimo</groupId>
+      <artifactId>geronimo-security</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>org.apache.geronimo</groupId>
       <artifactId>geronimo-system</artifactId>
     </dependency>
+
     <dependency>
       <groupId>org.apache.geronimo</groupId>
-      <artifactId>geronimo-management</artifactId>
+      <artifactId>geronimo-transaction</artifactId>
     </dependency>
 
     <dependency>
-      <groupId>org.apache.derby</groupId>
-      <artifactId>derby</artifactId>
+      <groupId>org.apache.geronimo.specs</groupId>
+      <artifactId>geronimo-jta_1.0.1B_spec</artifactId>
     </dependency>
+
     <dependency>
-      <groupId>org.apache.derby</groupId>
-      <artifactId>derbynet</artifactId>
+      <groupId>org.apache.geronimo.specs</groupId>
+      <artifactId>geronimo-j2ee-connector_1.5_spec</artifactId>
+    </dependency>
+
+    <!-- Thirdparty -->
+
+    <dependency>
+      <groupId>cglib</groupId>
+      <artifactId>cglib-nodep</artifactId>
     </dependency>
 
     <dependency>
       <groupId>commons-logging</groupId>
       <artifactId>commons-logging</artifactId>
     </dependency>
-  </dependencies>
 
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>mx4j</groupId>
+      <artifactId>mx4j</artifactId>
+    </dependency>
+  </dependencies>
 </project>
