--- a/modules/connector/pom.xml
+++ b/modules/connector/pom.xml
@@ -26,34 +26,37 @@
     <version>1.1-SNAPSHOT</version>
   </parent>
   <groupId>org.apache.geronimo</groupId>
-  <artifactId>geronimo-system</artifactId>
+  <artifactId>geronimo-connector</artifactId>
   <version>${geronimoVersion}</version>
   <packaging>jar</packaging>
-  <name>Geronimo :: System</name>
-  
-  <build>
-    <testResources>
-      <testResource>
-        <directory>src/test-data</directory>
-      </testResource>
-    </testResources>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <inherited>true</inherited>
-        <configuration>
-          <forkMode>pertest</forkMode>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+  <name>Geronimo :: Connector</name>
 
   <!-- ============ -->
   <!-- Dependencies -->
   <!-- ============ -->
 
   <dependencies>
+
+    <dependency>
+      <groupId>org.apache.geronimo</groupId>
+      <artifactId>geronimo-naming</artifactId>
+    </dependency>
+    <!-- Needed only for DeploymentException in a test, from NameFactory which probably shouldn't be throwing it in the first place-->
+    <dependency>
+      <groupId>org.apache.geronimo</groupId>
+      <artifactId>geronimo-deployment</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.geronimo</groupId>
+      <artifactId>geronimo-j2ee</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.geronimo</groupId>
+      <artifactId>geronimo-management</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>org.apache.geronimo</groupId>
       <artifactId>geronimo-common</artifactId>
@@ -61,12 +64,33 @@
 
     <dependency>
       <groupId>org.apache.geronimo</groupId>
-      <artifactId>geronimo-util</artifactId>
+      <artifactId>geronimo-kernel</artifactId>
     </dependency>
 
     <dependency>
       <groupId>org.apache.geronimo</groupId>
-      <artifactId>geronimo-kernel</artifactId>
+      <artifactId>geronimo-security</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.geronimo</groupId>
+      <artifactId>geronimo-transaction</artifactId>
+    </dependency>
+
+    <!--  test only -->
+    <dependency>
+      <groupId>org.apache.geronimo.specs</groupId>
+      <artifactId>geronimo-j2ee-jacc_1.0_spec</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.geronimo.specs</groupId>
+      <artifactId>geronimo-j2ee-connector_1.5_spec</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.geronimo.specs</groupId>
+      <artifactId>geronimo-jta_1.0.1B_spec</artifactId>
     </dependency>
 
     <dependency>
@@ -80,8 +104,8 @@
     </dependency>
 
     <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
+      <groupId>concurrent</groupId>
+      <artifactId>concurrent</artifactId>
     </dependency>
 
     <dependency>
@@ -89,10 +113,16 @@
       <artifactId>mx4j</artifactId>
     </dependency>
 
+    <!--  test only -->
     <dependency>
-      <groupId>concurrent</groupId>
-      <artifactId>concurrent</artifactId>
+      <groupId>tranql</groupId>
+      <artifactId>tranql</artifactId>
     </dependency>
 
+    <!-- needed for passwordcredential realm-->
+    <dependency>
+      <groupId>regexp</groupId>
+      <artifactId>regexp</artifactId>
+    </dependency>
   </dependencies>
 </project>
