--- a/modules/deploy-tool/pom.xml
+++ b/modules/deploy-tool/pom.xml
@@ -26,20 +26,28 @@
     <version>1.1-SNAPSHOT</version>
   </parent>
   <groupId>org.apache.geronimo</groupId>
-  <artifactId>geronimo-util</artifactId>
+  <artifactId>geronimo-deploy-tool</artifactId>
   <version>${geronimoVersion}</version>
   <packaging>jar</packaging>
-  <name>Geronimo :: Util</name>
+  <name>Geronimo :: Deploy :: CLI Tool</name>
+
   <!-- ============ -->
   <!-- Dependencies -->
   <!-- ============ -->
 
   <dependencies>
-    <!-- Module Dependencies -->
+
     <dependency>
-      <groupId>org.apache.geronimo.specs</groupId>
-      <artifactId>geronimo-j2ee-management_1.0_spec</artifactId>
+      <groupId>mx4j</groupId>
+      <artifactId>mx4j</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>mx4j</groupId>
+      <artifactId>mx4j-remote</artifactId>
+    </dependency>
+
+    <!-- Module Dependencies -->
 
     <dependency>
       <groupId>org.apache.geronimo.specs</groupId>
@@ -47,9 +55,28 @@
     </dependency>
 
     <dependency>
-      <groupId>commons-logging</groupId>
-      <artifactId>commons-logging</artifactId>
+      <groupId>org.apache.geronimo</groupId>
+      <artifactId>geronimo-common</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.geronimo</groupId>
+      <artifactId>geronimo-util</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.geronimo</groupId>
+      <artifactId>geronimo-system</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.geronimo</groupId>
+      <artifactId>geronimo-deployment</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.geronimo</groupId>
+      <artifactId>geronimo-deploy-jsr88</artifactId>
+    </dependency>
   </dependencies>
 </project>
