--- a/modules/j2ee/pom.xml
+++ b/modules/j2ee/pom.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="ISO-8859-1"?>
 <!--
 
     Copyright 2006 The Apache Software Foundation
@@ -15,6 +15,9 @@
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
+
+<!-- $Rev$ $Date$ -->
+
 <project>
   <parent>
     <groupId>org.apache.geronimo</groupId>
