--- a/modules/jmx-remoting/pom.xml
+++ b/modules/jmx-remoting/pom.xml
@@ -19,32 +19,38 @@
 <!-- $Rev$ $Date$ -->
 
 <project>
+  <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.apache.geronimo</groupId>
     <artifactId>geronimo</artifactId>
     <version>1.1-SNAPSHOT</version>
   </parent>
-  <modelVersion>4.0.0</modelVersion>
-  <artifactId>geronimo-activation</artifactId>
-  <name>Geronimo :: Activation</name>
+  <groupId>org.apache.geronimo</groupId>
+  <artifactId>geronimo-jmxremoting</artifactId>
   <version>${geronimoVersion}</version>
-  
-  <build>
-    <resources>
-      <resource>
-        <directory>src/resources</directory>
-      </resource>
-    </resources>
-  </build>
-  
+  <packaging>jar</packaging>
+  <name>Geronimo :: JMX Remoting</name>
+  <description>Provides remote access to a Geronimo server using JSR 160 JMX Remoting</description>
+
+  <!-- ============ -->
+  <!-- Dependencies -->
+  <!-- ============ -->
   <dependencies>
     <dependency>
-      <groupId>org.apache.geronimo.specs</groupId>
-      <artifactId>geronimo-activation_1.0.2_spec</artifactId>
+      <groupId>org.apache.geronimo</groupId>
+      <artifactId>geronimo-kernel</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.apache.geronimo.specs</groupId>
-      <artifactId>geronimo-javamail_1.3.1_spec</artifactId>
-    </dependency>    
+      <groupId>mx4j</groupId>
+      <artifactId>mx4j</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>mx4j</groupId>
+      <artifactId>mx4j-remote</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>commons-logging</groupId>
+      <artifactId>commons-logging</artifactId>
+    </dependency>
   </dependencies>
 </project>
