--- a/modules/naming/pom.xml
+++ b/modules/naming/pom.xml
@@ -19,32 +19,53 @@
 <!-- $Rev$ $Date$ -->
 
 <project>
+  <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.apache.geronimo</groupId>
     <artifactId>geronimo</artifactId>
     <version>1.1-SNAPSHOT</version>
   </parent>
-  <modelVersion>4.0.0</modelVersion>
-  <artifactId>geronimo-activation</artifactId>
-  <name>Geronimo :: Activation</name>
+  <groupId>org.apache.geronimo</groupId>
+  <artifactId>geronimo-naming</artifactId>
   <version>${geronimoVersion}</version>
+  <packaging>jar</packaging>
+  <name>Geronimo :: Naming</name>
   
   <build>
-    <resources>
-      <resource>
-        <directory>src/resources</directory>
-      </resource>
-    </resources>
+    <testResources>
+      <testResource>
+        <directory>src/test-data</directory>
+      </testResource>
+    </testResources>
   </build>
   
+  <!-- ============ -->
+  <!-- Dependencies -->
+  <!-- ============ -->
+
   <dependencies>
+
+    <!-- Module Dependencies -->
+    <!-- only for ComponentContextInterceptor -->
     <dependency>
-      <groupId>org.apache.geronimo.specs</groupId>
-      <artifactId>geronimo-activation_1.0.2_spec</artifactId>
+      <groupId>org.apache.geronimo</groupId>
+      <artifactId>geronimo-core</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>org.apache.geronimo</groupId>
+      <artifactId>geronimo-kernel</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>org.apache.geronimo.specs</groupId>
-      <artifactId>geronimo-javamail_1.3.1_spec</artifactId>
-    </dependency>    
+      <artifactId>geronimo-jta_1.0.1B_spec</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>mx4j</groupId>
+      <artifactId>mx4j</artifactId>
+    </dependency>
+
   </dependencies>
 </project>
