--- a/modules/scripts/pom.xml
+++ b/modules/scripts/pom.xml
@@ -19,16 +19,18 @@
 <!-- $Rev$ $Date$ -->
 
 <project>
+  <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.apache.geronimo</groupId>
     <artifactId>geronimo</artifactId>
     <version>1.1-SNAPSHOT</version>
   </parent>
-  <modelVersion>4.0.0</modelVersion>
-  <artifactId>geronimo-activation</artifactId>
-  <name>Geronimo :: Activation</name>
+  <groupId>org.apache.geronimo</groupId>
+  <artifactId>geronimo-scripts</artifactId>
   <version>${geronimoVersion}</version>
-  
+  <packaging>jar</packaging>
+  <name>Geronimo :: Scripts</name>
+
   <build>
     <resources>
       <resource>
@@ -36,15 +38,4 @@
       </resource>
     </resources>
   </build>
-  
-  <dependencies>
-    <dependency>
-      <groupId>org.apache.geronimo.specs</groupId>
-      <artifactId>geronimo-activation_1.0.2_spec</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.geronimo.specs</groupId>
-      <artifactId>geronimo-javamail_1.3.1_spec</artifactId>
-    </dependency>    
-  </dependencies>
 </project>
