--- a/modules/security-builder/pom.xml
+++ b/modules/security-builder/pom.xml
@@ -19,16 +19,17 @@
 <!-- $Rev$ $Date$ -->
 
 <project>
+  <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.apache.geronimo</groupId>
     <artifactId>geronimo</artifactId>
     <version>1.1-SNAPSHOT</version>
   </parent>
-  <modelVersion>4.0.0</modelVersion>
-  <artifactId>geronimo-j2ee-schema</artifactId>
-  <name>Geronimo :: J2EE Schema</name>
+  <groupId>org.apache.geronimo</groupId>
+  <artifactId>geronimo-security-builder</artifactId>
   <version>${geronimoVersion}</version>
-  <description>Geronimo J2EE schema</description>
+  <packaging>jar</packaging>
+  <name>Geronimo :: Security :: Builder</name>
 
   <build>
     <plugins>
@@ -44,32 +45,25 @@
         </executions>
         <configuration>
           <download>true</download>
-          <schemaDirectory>src/j2ee_1_4schema</schemaDirectory>
+          <schemaDirectory>src/schema</schemaDirectory>
           <xmlConfigs>
-            <xmlConfig implementation="java.io.File">
-              src/conf
-            </xmlConfig>
+            <xmlConfig implementation="java.io.File">src/schema/xmlconfig.xml</xmlConfig>
           </xmlConfigs>
         </configuration>
       </plugin>
     </plugins>
-    <testResources>
-      <testResource>
-        <directory>src/test-data</directory>
-      </testResource>
-    </testResources>
   </build>
 
+  <!-- ============ -->
+  <!-- Dependencies -->
+  <!-- ============ -->
   <dependencies>
+    <!-- needed for xmlbeans runtime-->
     <dependency>
       <groupId>xmlbeans</groupId>
       <artifactId>xbean</artifactId>
     </dependency>
-    <dependency>
-      <groupId>stax</groupId>
-      <artifactId>stax-api</artifactId>
-      <scope>test</scope>
-    </dependency>
+
     <!--  The following prevents xmlbeans-jsr173-api from being downloaded.
       This is good, since it does not exist in the repos. Very hackish. -->
     <dependency>
@@ -84,5 +78,52 @@
         </exclusion>
       </exclusions>
     </dependency>
+
+    <dependency>
+      <groupId>org.apache.geronimo</groupId>
+      <artifactId>geronimo-security</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.geronimo</groupId>
+      <artifactId>geronimo-deployment</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.geronimo</groupId>
+      <artifactId>geronimo-deploy-config</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.geronimo</groupId>
+      <artifactId>geronimo-service-builder</artifactId>
+    </dependency>
+
+    <!--needed only because security schema references j2ee 1.4 schema for description element -->
+    <dependency>
+      <groupId>org.apache.geronimo</groupId>
+      <artifactId>geronimo-j2ee-schema</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.geronimo</groupId>
+      <artifactId>geronimo-common</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.geronimo</groupId>
+      <artifactId>geronimo-j2ee</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.geronimo</groupId>
+      <artifactId>geronimo-kernel</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>mx4j</groupId>
+      <artifactId>mx4j</artifactId>
+    </dependency>
+
   </dependencies>
 </project>
