--- a/modules/service-builder/pom.xml
+++ b/modules/service-builder/pom.xml
@@ -26,25 +26,70 @@
     <version>1.1-SNAPSHOT</version>
   </parent>
   <groupId>org.apache.geronimo</groupId>
-  <artifactId>geronimo-deployment</artifactId>
+  <artifactId>geronimo-service-builder</artifactId>
   <version>${geronimoVersion}</version>
   <packaging>jar</packaging>
-  <name>Geronimo :: Deployment</name>
-  <description>Geronimo Deployment</description>
+  <name>Geronimo :: Service :: Builder</name>
+
+  <build>
+    <testResources>
+      <testResource>
+        <directory>src/test-resources</directory>
+      </testResource>
+    </testResources>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>xmlbeans-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>xmlbeans</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <download>true</download>
+          <schemaDirectory>src/schema</schemaDirectory>
+          <xmlConfigs>
+            <xmlConfig implementation="java.io.File">src/schema/xmlconfig.xml</xmlConfig>
+          </xmlConfigs>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+  
   <!-- ============ -->
   <!-- Dependencies -->
   <!-- ============ -->
-
   <dependencies>
+    <!-- <dependency>
+      <groupId>xmlbeans</groupId>
+      <artifactId>xmlbeans-maven-plugin</artifactId>
+      <version>${xmlbeans_maven_plugin_version}</version>
+      <type>plugin</type>
+    </dependency> -->
 
-    <dependency>
+    <!-- needed for xmlbeans runtime-->
+    <!-- <dependency>
       <groupId>xmlbeans</groupId>
       <artifactId>xbean</artifactId>
-    </dependency>
+      <version>${xmlbeans_version}</version>
+    </dependency> -->
 
+    <!--  The following prevents xmlbeans-jsr173-api from being downloaded.
+      This is good, since it does not exist in the repos. Very hackish. -->
     <dependency>
       <groupId>stax</groupId>
-      <artifactId>stax-api</artifactId>
+      <artifactId>stax</artifactId>
+      <version>1.1.1-dev</version>
+      <scope>compile</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>xmlbeans</groupId>
+          <artifactId>xmlbeans-jsr173-api</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <dependency>
@@ -59,6 +104,11 @@
 
     <dependency>
       <groupId>org.apache.geronimo</groupId>
+      <artifactId>geronimo-deployment</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.geronimo</groupId>
       <artifactId>geronimo-system</artifactId>
     </dependency>
 
@@ -68,13 +118,18 @@
     </dependency>
 
     <dependency>
-      <groupId>mx4j</groupId>
-      <artifactId>mx4j</artifactId>
+      <groupId>org.apache.geronimo</groupId>
+      <artifactId>geronimo-j2ee</artifactId>
     </dependency>
 
     <dependency>
-      <groupId>cglib</groupId>
-      <artifactId>cglib-nodep</artifactId>
+      <groupId>org.apache.geronimo</groupId>
+      <artifactId>geronimo-j2ee-schema</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>mx4j</groupId>
+      <artifactId>mx4j</artifactId>
     </dependency>
 
     <dependency>
@@ -85,6 +140,7 @@
     <dependency>
       <groupId>xml-resolver</groupId>
       <artifactId>xml-resolver</artifactId>
-   </dependency>
+    </dependency>
   </dependencies>
+
 </project>
