--- a/modules/test-ddbean/pom.xml
+++ b/modules/test-ddbean/pom.xml
@@ -19,32 +19,51 @@
 <!-- $Rev$ $Date$ -->
 
 <project>
+  <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.apache.geronimo</groupId>
     <artifactId>geronimo</artifactId>
     <version>1.1-SNAPSHOT</version>
   </parent>
-  <modelVersion>4.0.0</modelVersion>
-  <artifactId>geronimo-activation</artifactId>
-  <name>Geronimo :: Activation</name>
+  <groupId>org.apache.geronimo</groupId>
+  <artifactId>geronimo-test-ddbean</artifactId>
   <version>${geronimoVersion}</version>
+  <packaging>jar</packaging>
+  <name>Geronimo :: Test :: DDBeans</name>
   
   <build>
-    <resources>
-      <resource>
-        <directory>src/resources</directory>
-      </resource>
-    </resources>
+    <testResources>
+      <testResource>
+        <directory>src/test-resources</directory>
+      </testResource>
+    </testResources>
   </build>
-  
+
+  <!-- ============ -->
+  <!-- Dependencies -->
+  <!-- ============ -->
   <dependencies>
     <dependency>
-      <groupId>org.apache.geronimo.specs</groupId>
-      <artifactId>geronimo-activation_1.0.2_spec</artifactId>
+      <groupId>xmlbeans</groupId>
+      <artifactId>xbean</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>stax</groupId>
+      <artifactId>stax-api</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>org.apache.geronimo.specs</groupId>
-      <artifactId>geronimo-javamail_1.3.1_spec</artifactId>
-    </dependency>    
+      <artifactId>geronimo-j2ee-deployment_1.1_spec</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.geronimo</groupId>
+      <artifactId>geronimo-j2ee-schema</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.geronimo</groupId>
+      <artifactId>geronimo-service-builder</artifactId>
+    </dependency>
   </dependencies>
 </project>
