--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,7 @@
     <asmVersion>1.4.3</asmVersion>
     <asn1Version>0.3.2</asn1Version>
     <axisVersion>1.3</axisVersion>
+    <backportUtilConcurrentVersion>2.0_01_pd</backportUtilConcurrentVersion>
     <castorVersion>0.9.5.3</castorVersion>
     <cglibVersion>2.1_3</cglibVersion>
     <commonsBeanutilsVersion>1.6.1</commonsBeanutilsVersion>
@@ -184,9 +185,9 @@
     <tomcatVersion>5.5.9</tomcatVersion>
     <tranqlConnectorVersion>1.0</tranqlConnectorVersion>
     <tranqlVendorsVersion>1.0</tranqlVendorsVersion>
-    <tranqlVersion>1.2-SNAPSHOT</tranqlVersion>
+    <tranqlVersion>1.2.2</tranqlVersion>
     <velocityVersion>1.4</velocityVersion>
-    <wsdl4jVersion>PATCH-1193602</wsdl4jVersion>
+    <wsdl4jVersion>1.5.2</wsdl4jVersion>
     <xercesVersion>2.6.2</xercesVersion>
     <xfireVersion>20050202</xfireVersion>
     <xmlApisVersion>1.0.b2</xmlApisVersion>
@@ -296,6 +297,21 @@
        |
        --> 
       <dependency>
+        <groupId>activeio</groupId>
+        <artifactId>activeio</artifactId>
+        <version>${activeIoVersion}</version>
+      </dependency>
+      <dependency>
+        <groupId>backport-util-concurrent</groupId>
+        <artifactId>backport-util-concurrent</artifactId>
+        <version>${backportUtilConcurrentVersion}</version>
+      </dependency>
+      <dependency>
+        <groupId>castor</groupId>
+        <artifactId>castor</artifactId>
+        <version>${castorVersion}</version>
+      </dependency>
+      <dependency>
         <groupId>cglib</groupId>
         <artifactId>cglib-nodep</artifactId>
         <version>${cglibVersion}</version>
@@ -311,6 +327,16 @@
         <version>${concurrentVersion}</version>
       </dependency>
       <dependency>
+        <groupId>howl</groupId>
+        <artifactId>howl-logger</artifactId>
+        <version>${howlVersion}</version>
+      </dependency>
+      <dependency>
+        <groupId>hsqldb</groupId>
+        <artifactId>hsqldb</artifactId>
+        <version>${hsqldbVersion}</version>
+      </dependency>
+      <dependency>
         <groupId>log4j</groupId>
         <artifactId>log4j</artifactId>
         <version>${log4jVersion}</version>
@@ -318,6 +344,11 @@
       <dependency>
         <groupId>mx4j</groupId>
         <artifactId>mx4j</artifactId>
+        <version>${mx4jVersion}</version>
+      </dependency>
+      <dependency>
+        <groupId>mx4j</groupId>
+        <artifactId>mx4j-remote</artifactId>
         <version>${mx4jVersion}</version>
       </dependency>                        
       <dependency>
@@ -341,14 +372,61 @@
         <version>${derbyVersion}</version>
       </dependency>
       <dependency>
+        <groupId>regexp</groupId>
+        <artifactId>regexp</artifactId>
+        <version>${regexpVersion}</version>
+      </dependency>
+      <dependency>
         <groupId>scout</groupId>
         <artifactId>scout</artifactId>
         <version>${scoutVersion}</version>
       </dependency>
       <dependency>
+        <groupId>springframework</groupId>
+        <artifactId>spring</artifactId>
+        <version>${springVersion}</version>
+      </dependency>
+      <dependency>
+        <groupId>stax</groupId>
+        <artifactId>stax</artifactId>
+        <version>${staxVersion}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>xmlbeans</groupId>
+            <artifactId>xmlbeans-jsr173-api</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <dependency>
         <groupId>stax</groupId>
         <artifactId>stax-api</artifactId>
         <version>${staxApiVersion}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>xmlbeans</groupId>
+            <artifactId>xmlbeans-jsr173-api</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>tranql</groupId>
+        <artifactId>tranql</artifactId>
+        <version>${tranqlVersion}</version>
+      </dependency>
+      <dependency>
+        <groupId>wsdl4j</groupId>
+        <artifactId>wsdl4j</artifactId>
+        <version>${wsdl4jVersion}</version>
+      </dependency>
+      <dependency>
+        <groupId>xfire</groupId>
+        <artifactId>xfire</artifactId>
+        <version>${xfireVersion}</version>
+      </dependency>
+      <dependency>
+        <groupId>xfire</groupId>
+        <artifactId>xfire-java</artifactId>
+        <version>${xfireVersion}</version>
       </dependency>
       <dependency>
         <groupId>xmlbeans</groupId>
@@ -359,6 +437,16 @@
         <groupId>xml-resolver</groupId>
         <artifactId>xml-resolver</artifactId>
         <version>${xmlResolverVersion}</version>
+      </dependency>
+      <dependency>
+        <groupId>xpp3</groupId>
+        <artifactId>xpp3</artifactId>
+        <version>${xpp3Version}</version>
+      </dependency>
+      <dependency>
+        <groupId>xstream</groupId>
+        <artifactId>xstream</artifactId>
+        <version>${xstreamVersion}</version>
       </dependency>
       <!-- 
         |
@@ -377,12 +465,57 @@
       </dependency>
       <dependency>
         <groupId>org.apache.geronimo</groupId>
+        <artifactId>geronimo-connector</artifactId>
+        <version>${geronimoVersion}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.geronimo</groupId>
+        <artifactId>geronimo-connector-builder</artifactId>
+        <version>${geronimoVersion}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.geronimo</groupId>
         <artifactId>geronimo-core</artifactId>
         <version>${geronimoVersion}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.geronimo</groupId>
+        <artifactId>geronimo-deploy-config</artifactId>
+        <version>${geronimoVersion}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.geronimo</groupId>
+        <artifactId>geronimo-deploy-jsr88</artifactId>
+        <version>${geronimoVersion}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.geronimo</groupId>
+        <artifactId>geronimo-deploy-tool</artifactId>
+        <version>${geronimoVersion}</version>
+      </dependency>      
+      <dependency>
+        <groupId>org.apache.geronimo</groupId>
+        <artifactId>geronimo-deployment</artifactId>
+        <version>${geronimoVersion}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.geronimo</groupId>
         <artifactId>geronimo-derby</artifactId>
+        <version>${geronimoVersion}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.geronimo</groupId>
+        <artifactId>geronimo-j2ee</artifactId>
+        <version>${geronimoVersion}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.geronimo</groupId>
+        <artifactId>geronimo-j2ee-builder</artifactId>
+        <version>${geronimoVersion}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.geronimo</groupId>
+        <artifactId>geronimo-j2ee-schema</artifactId>
         <version>${geronimoVersion}</version>
       </dependency>
       <dependency>
@@ -397,12 +530,52 @@
       </dependency>
       <dependency>
         <groupId>org.apache.geronimo</groupId>
+        <artifactId>geronimo-naming</artifactId>
+        <version>${geronimoVersion}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.geronimo</groupId>
+        <artifactId>geronimo-naming-builder</artifactId>
+        <version>${geronimoVersion}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.geronimo</groupId>
+        <artifactId>geronimo-security</artifactId>
+        <version>${geronimoVersion}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.geronimo</groupId>
+        <artifactId>geronimo-security-builder</artifactId>
+        <version>${geronimoVersion}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.geronimo</groupId>
+        <artifactId>geronimo-service-builder</artifactId>
+        <version>${geronimoVersion}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.geronimo</groupId>
         <artifactId>geronimo-system</artifactId>
         <version>${geronimoVersion}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.geronimo</groupId>
+        <artifactId>geronimo-test-ddbean</artifactId>
+        <version>${geronimoVersion}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.geronimo</groupId>
+        <artifactId>geronimo-transaction</artifactId>
+        <version>${geronimoVersion}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.geronimo</groupId>
         <artifactId>geronimo-util</artifactId>
+        <version>${geronimoVersion}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.geronimo</groupId>
+        <artifactId>geronimo-web-builder</artifactId>
         <version>${geronimoVersion}</version>
       </dependency>
    </dependencies>
@@ -499,17 +672,39 @@
   
   <modules>
     <module>modules/activation</module>
+    <module>modules/client</module>
     <module>modules/common</module>
+    <module>modules/connector</module>
+    <module>modules/connector-builder</module>
     <module>modules/converter</module>
     <module>modules/core</module>
+    <module>modules/deploy-config</module>
+    <module>modules/deploy-jsr88</module>
+    <module>modules/deploy-tool</module>
     <module>modules/deployment</module>
     <module>modules/derby</module>
     <module>modules/j2ee</module>
+    <module>modules/j2ee-builder</module>
     <module>modules/j2ee-schema</module>
+    <module>modules/javamail-transport</module>
+    <module>modules/jmx-remoting</module>
     <module>modules/kernel</module>
+    <module>modules/mail</module>
     <module>modules/management</module>
+    <module>modules/naming</module>
+    <module>modules/scripts</module>
+    <module>modules/security</module>
+    <module>modules/security-builder</module>
+    <module>modules/service-builder</module>
+    <module>modules/session</module>
+    <module>modules/spring</module>
     <module>modules/system</module>
+    <module>modules/test-ddbean</module>
+    <module>modules/timer</module>
+    <module>modules/transaction</module>
     <module>modules/util</module>
+    <module>modules/web-builder</module>
+    <module>modules/webservices</module>
   </modules>
   
 </project>
