M2 profiles introduced to allow execution of M2 commands upon a single module.
Run mvn -o -Dmodule=kernel test and the test phase will be initiated in the kernel module. Leaving the module property out executes a command over the entire module set.

NOTE: It's not yet possible to run test successfully over the kernel module. There's a caveat with M2 classloading. More on the dev mailing list...


git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@379071 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/kernel/pom.xml
+++ b/modules/kernel/pom.xml
@@ -34,9 +34,10 @@
   <build>
     <resources>
       <resource>
-        <directory>${basedir}/src</directory>
+        <directory>${basedir}/src/java</directory>
         <includes>
-          <include>META-INF/**/*.*</include>
+          <include>**/*.xml</include>
+          <include>**/*.properties</include>
         </includes>
       </resource>
     </resources>
@@ -46,11 +47,13 @@
     <dependency>
       <groupId>org.apache.geronimo.specs</groupId>
       <artifactId>geronimo-j2ee-management_1.0_spec</artifactId>
+      <version>${geronimoSpecJ2eeManagementVersion}</version>
     </dependency>
 
     <dependency>
       <groupId>org.apache.geronimo.specs</groupId>
       <artifactId>geronimo-j2ee-deployment_1.1_spec</artifactId>
+      <version>${geronimoSpecJ2eeDeploymentVersion}</version>
     </dependency>
 
     <!-- Thirdparty -->
@@ -58,21 +61,25 @@
     <dependency>
       <groupId>cglib</groupId>
       <artifactId>cglib-nodep</artifactId>
+      <version>${cglibVersion}</version>
     </dependency>
 
     <dependency>
       <groupId>commons-logging</groupId>
       <artifactId>commons-logging</artifactId>
+      <version>${commonsLoggingVersion}</version>
     </dependency>
 
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
+      <version>${log4jVersion}</version>
     </dependency>
 
     <dependency>
       <groupId>mx4j</groupId>
       <artifactId>mx4j</artifactId>
+      <version>${mx4jVersion}</version>
     </dependency>
   </dependencies>
 
